fixes #5326 - the title text is display:block, causing the line wrap in ie7. (float:right) ... setting to inline fixes.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@11768 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -694,6 +694,9 @@ body .dijitAlignClient { position: absolute; }
 	display: block;
 	overflow: hidden;
 }
+.dj_ie7 .dijitTitlePaneTextNode {
+	display:inline; 
+}
 
 /* Color Palette */
 
